# wx-gui

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
app/: __init__.py  bootstrap.py  main.py
app/application/dto/: auto_reply.py  read_messages_result.py  read_visible_chats_result.py  send_message_result.py  session_status.py
app/application/usecases/: connect_wechat.py  plan_auto_replies.py  read_current_chat_messages.py  read_visible_chats.py  send_message.py
app/automation/: __init__.py  exceptions.py
app/automation/drivers/: __init__.py  accessibility_driver.py  applescript_driver.py  image_driver.py
app/automation/ocr/: __init__.py  vision_ocr.py
app/automation/protocols/: __init__.py  wechat_driver.py
app/domain/models/: message.py  session.py  task.py
app/gui/: main_window.py
app/gui/pages/: __init__.py  log_page.py  message_page.py  session_page.py  task_page.py
app/infrastructure/config/: settings.py
app/infrastructure/logging/: logger.py
app/shared/: exceptions.py
scripts/: debug_current_chat_ocr.py  debug_visible_chat_badges.py  debug_wechat_search.py
tests/unit/: test_plan_auto_replies.py  test_read_current_chat_messages.py  test_read_visible_chats.py  test_send_message.py  test_settings.py
